# clarifycoder-backend

./: README.md  app.py  pyproject.toml  requirements.txt
agentic_clarifycoder/: clarify_agent_clarifycoder.py  compare_experiments.py  dashboard.py  requirements.txt  results.csv  results.xlsx
agentic_clarifycoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic_clarifycoder/core/agents/: code_agent_rulebased.py  eval_agent_llm.py  eval_agent_rulebased.py  refine_agent_llm.py
agentic_clarifycoder/core/demo/: demo.py
agentic_clarifycoder/core/logs/: code.jsonl  eval.jsonl  hybrid_run1.json
agentic_clarifycoder/core/utils/: logger.py
agentic_clarifycoder/logs/: answer.jsonl  clarify.jsonl  code.jsonl  eval.jsonl  hybrid_run2.json  llm_run1.json  llm_run2.json  llm_run3.json  refine.jsonl
agentic_clarifycoder/logs/20250920_164041/: baseline_run1.json  llm_run1.json
agentic_clarifycoder/logs/20250920_164533/: llm_run1.json
agentic_clarifycoder/logs/20250920_165705/: baseline_run1.json  hybrid_run1.json
agentic_clarifycoder/logs/20250920_165838/: baseline_run4.json  hybrid_run1.json  llm_run1.json  (+7 more)
clarifycoder_agent/: compare_experiments.py  pyproject.toml  results.csv
clarifycoder_agent/agents/: runner.py
clarifycoder_agent/clarifycoder_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clarifycoder_agent/logs/: answer.jsonl  baseline_run1.json  baseline_run2.json  baseline_run3.json  clarify.jsonl  hybrid_run1.json  hybrid_run3.json
logs/: answer.jsonl  clarify.jsonl  code.jsonl  eval.jsonl  refine.jsonl
(+23 files in other folders)
