[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_clarifycoder"
version = "0.1.0"
description = "ClarifyCoder multi-agent framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama",
    "streamlit",
    "pytest",
]

[project.scripts]
clarifycoder-demo = "agentic_clarifycoder.demo.demo:main"
